web-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.1.0 ()
  creationTimestamp: null
  labels:
    app: frontend
  name: web
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: frontend
    spec:
      containers:
      - image: web
        name: web
        ports:
        - containerPort: 6060
        resources: {}
      restartPolicy: Always
status: {}
